samples/_failures_safe/1761343154_2b3b8a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_11d5908a.c: In function ‘main’:
./samples/SAFE/__tmp_11d5908a.c:158:21: error: expected declaration or statement at end of input
  158 |                     print_matrix(&result, "A+B");
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_11d5908a.c:158:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_11d5908a.c:158:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_11d5908a.c:158:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_11d5908a.c:158:21: error: expected declaration or statement at end of input
